--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <li><a href=" https://vercrowz.github.io/Maison-d-h-tes/" target="_blank" rel="noopener noreferrer">Maison d'hôtes</a></li>
       <li><a href=" https://vercrowz.github.io/Cards-Animation/" target="_blank" rel="noopener noreferrer">Cards Animation</a></li>
       <li><a href=" https://vercrowz.github.io/Parallax/" target="_blank" rel="noopener noreferrer">Parallax</a></li>
-      <li><a href=" https://vercrowz.github.io/-Dark-Mode-Toggle-Button/" target="_blank" rel="noopener noreferrer">Switch Button</a></li>
+      <li><a href=" https://vercrowz.github.io/-Dark-Mode-Toggle-Button/" target="_blank" rel="noopener noreferrer">Switch button</a></li>
    
     </ul>
   </nav>
