--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li><a href=" https://vercrowz.github.io/-Dark-Mode-Toggle-Button/" target="_blank" rel="noopener noreferrer">Switch Button</a></li>
       <li><a href=" https://vercrowz.github.io/TodoList/" target="_blank" rel="noopener noreferrer">TodoList</a></li>
       <li><a href=" https://vercrowz.github.io/Digital-Clock/" target="_blank" rel="noopener noreferrer">Digital Clock</a></li>
+      <li><a href=" https://vercrowz.github.io/Calculator/" target="_blank" rel="noopener noreferrer">Calculator</a></li>
     </ul>
   </nav>
   <section>
